# sca3_main

./: .gitignore  README.md
diskfind2/: Makefile  diskfind.pro  makedeb.sh
diskfind2/debian/: README.Debian  README.source  changelog  control  diskfind2-console.dirs  diskfind2-console.install  diskfind2-fsplugins.dirs  diskfind2-fsplugins.install  diskfind2-gui.dirs  diskfind2-gui.install  diskfind2-plugins.dirs  diskfind2-plugins.install  files  rules
diskfind2/diskfind_console/: Makefile  TESTFILE  basetypedparser.cpp  dict  diskfind.cpp  diskfind.h  diskfind_console.pro  docparser.h  main.cpp  signature.cpp  signature.h  support.cpp  support.h  test.sh  test.txt  typed_parser.cpp  typed_parser.h
diskfind2/diskfind_fsplugins/: Makefile  basefsparser.h  diskfind_fsplugins.pri  diskfind_fsplugins.pro
diskfind2/diskfind_gui/: Makefile  checkboxlist.cpp  checkboxlist.h  devcombobox.cpp  (+20 more)
iceweasel-3.0.6/: Makefile  config.cache  config.status  mozilla-config.h  unallmakefiles
shreg/: README
thunar-0.9.0/: Makefile  Makefile.am  Makefile.in  Thunar.spec  ThunarBulkRename.in  ThunarHelp.in  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  libtool
thunar-0.9.0/icons/16x16/: Makefile  Makefile.am  Makefile.in
thunar-volman-0.2.0/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  libtool  thunar-volman-settings
xfce4-session-4.4.2/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  libtool  xfce4-session.rc  xfce4-session.spec
(+1586 files in other folders)
