# $Id: Makefile.am 26421 2007-12-02 13:46:28Z benny $

appsdir = $(datadir)/icons/hicolor/16x16/apps
apps_DATA =								\
	Thunar.png

stockdir = $(datadir)/icons/hicolor/16x16/stock/navigation
stock_DATA =								\
	stock_thunar-shortcuts.png					\
	stock_thunar-templates.png

EXTRA_DIST =								\
	$(apps_DATA)							\
	$(stock_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
